main.jsx 및 Board 주석 수정