@@ -50,14 +50,12 @@ public class BoardResponseDTO {
                                           .deletedYn(board.getDeletedYn())
                                           .writerName(board.getUser() != null ? board.getUser().getName() : null)
                                           .categoryName(board.getCategory() != null ? board.getCategory().getName() : null)
-                                          .files(board.getFiles() != null ? board.getFiles().stream()
-                                                                                  .map(file -> BoardFileResponseDTO.toDTO(file))
-                                                                                  .collect(Collectors.toList()) 
-                                                                           : List.of())
-                                          .replies(board.getReplies() != null ? board.getReplies().stream()
-                                                                                      .map(reply -> BoardReplyResponseDTO.toDTO(reply))
-                                                                                      .collect(Collectors.toList()) 
-                                                                               : List.of())
+                                          .files(board.getFiles().stream()
+                                                                 .map(file -> BoardFileResponseDTO.toDTO(file))
+                                                                 .toList())
+                                          .replies(board.getReplies().stream()
+                                                                     .map(reply -> BoardReplyResponseDTO.toDTO(reply))
+                                                                     .toList())
                                           .build();
     }
 }
